--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@pnp/sp": "^3.9.0",
     "office-ui-fabric-react": "7.174.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-select": "^5.6.1"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.14.0",
