added more property pane, changed packege name, made the upcomming field dynamic, fixed some UI issues, added sorting products handle no products or no list selected exceptions

--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,7 @@
   },
   "externals": {},
   "localizedResources": {
-    "DisplayCollectionWebPartStrings": "lib/webparts/displayCollection/loc/{locale}.js"
+    "DisplayCollectionWebPartStrings": "lib/webparts/displayCollection/loc/{locale}.js",
+    "PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
   }
 }
