--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,7 @@
     "plusBeta": false,
     "isCreatingSolution": true,
     "version": "1.14.0",
-    "libraryName": "item-listing-wp",
+    "libraryName": "product-catalogue",
     "libraryId": "6dbeb30c-af6b-4c23-b907-c6b9320ceaf5",
     "environment": "spo",
     "packageManager": "npm",
