--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "item-listing-wp",
+  "name": "product-catalogue",
   "version": "0.0.1",
   "private": true,
   "main": "lib/index.js",
@@ -17,6 +17,8 @@
     "@microsoft/sp-webpart-base": "1.14.0",
     "@pnp/graph": "^3.9.0",
     "@pnp/sp": "^3.9.0",
+    "@pnp/spfx-property-controls": "^3.11.0",
+    "moment": "^2.29.4",
     "office-ui-fabric-react": "7.174.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
