--- a/src/webparts/displayCollection/DisplayCollectionWebPart.manifest.json
+++ b/src/webparts/displayCollection/DisplayCollectionWebPart.manifest.json
@@ -26,6 +26,7 @@
       "field1": "",
       "field2": "",
       "field3": "",
+      "field4": "",
       "lists": "",
       "pagingItems": ""
       
